# iks-capital-tg-bot-template

./: .dockerignore  .env.dist  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: __main__.py  const.py
app/admin/: auth.py
app/admin/middlewares/: __init__.py  db.py
app/admin/views/: __init__.py  admin_user.py  base.py  user.py
app/endpoints/: healthcheck.py  telegram.py
app/factory/: __init__.py  admin.py  app_config.py  services.py  session_pool.py
app/factory/telegram/: __init__.py  bot.py  dispatcher.py  fastapi.py
app/models/config/env/: __init__.py  admin.py  app.py  common.py  middleware.py
app/models/dto/: __init__.py  user.py
app/models/sql/: __init__.py  base.py  user.py
app/runners/: app.py  lifespan.py  polling.py  webhook.py
app/services/: base.py  user.py
app/services/postgres/: __init__.py  context.py
app/services/postgres/repositories/: base.py  general.py  user.py
app/telegram/handlers/main/: __init__.py  common.py
app/telegram/middlewares/: __init__.py  db.py  event_typed.py  user.py
app/utils/: custom_types.py
app/utils/logging/: __init__.py  setup.py
frontend/statics/js/: copy_btn_modal_info.js  show_modal_info.js
frontend/templates/admin/: create.html  edit.html  list.html
frontend/templates/admin/modals/: info.html  macro_show_modal_info.html
migrations/: env.py
migrations/versions/: 2025_10_08_2300-0c1406fbafcb_initial.py  2025_10_16_1156-89022f1cb3df_add_is_super_admin_to_admin_table.py
scripts/: create_admin_user.py  create_super_admin_user.py  run-bot.sh  run-tests.sh
templates/admin/modals/: info.html
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/admin/: test_admin_user_view.py
tests/integration/services/: test_user.py
